# fastapi-calculator

./: README.md  pyproject.toml
app/: main.py  models.py  schemas.py
app/api/routes/: calculator.py
