[project]
name = "fastapi-calculator"
version = "0.1.0"
description = "API REST de calculadora con FastAPI"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0"
]

[tool.uvicorn]
factory = true
app = "app.main:create_app"
host = "0.0.0.0"
port = 8000
reload = true
